k8s/optional/package-proxy-athens.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: athens
  namespace: workspaces-system
  labels:
    workspaces.platform.dev/app: proxy
    workspaces.platform.dev/component: package-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: athens
  template:
    metadata:
      labels:
        app: athens
        workspaces.platform.dev/app: proxy
        workspaces.platform.dev/component: package-proxy
    spec:
      containers:
        - name: athens
          image: gomods/athens:v0.14.0
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: storage
              mountPath: /var/lib/athens
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: athens-storage

---
apiVersion: v1
kind: Service
metadata:
  name: athens
  namespace: workspaces-system
spec:
  selector:
    app: athens
  ports:
    - name: http
      port: 3000
      targetPort: 3000
